--- a/src/components/layout.module.css
+++ b/src/components/layout.module.css
@@ -1,20 +1,34 @@
 .container {
-    margin: auto;
-    max-width: 800px;
+    margin: 0px;
+    max-width: 100%;
     font-family: sans-serif;
   }
   
+.top-banner {
+  margin: 0px;
+  max-width: 100%;
+  font-family: sans-serif;
+  background-color: black;
+  height: 300px;
+}
+
 .heading {
   color: #737374;
 }
+
+
+.description {
+  color: #b6b6b8;
+}
+
 .nav-links {
   display: flex;
   list-style: none;
-  padding-left: 0;
+  padding-left: 2px;
 }
 
 .nav-link-item {
-  padding-right: 2rem;
+  padding-right: 5rem;
 }
 
 .nav-link-text {
@@ -26,4 +40,5 @@
   color: #CFB7BF;
   font-weight: 700;
   margin: 3rem 0;
+  margin-bottom: 0px;
 }
