--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -244,11 +244,11 @@
   }
   
   /* Custom classes */
-  
+
   .global-wrapper {
-    margin: var(--spacing-0) auto;
-    max-width: var(--maxWidth-wrapper);
-    padding: var(--spacing-10) var(--spacing-5);
+    margin: var(--spacing-5) auto;
+    max-width: var(--maxWidth-wrapper); /*originally --maxWidth-wrapper*/
+    padding: var(--spacing-0) var(--spacing-5);
   }
   
   .global-wrapper[data-is-root-path="true"] .bio {
@@ -258,11 +258,16 @@
   .global-header {
     margin-bottom: var(--spacing-12);
     background-color: var(--color-heading-black);
+    margin-left: var(--spacing-5) auto;
+    padding: var(--spacing-0) var(--spacing-5);
+
   }
   
   .main-heading {
     font-size: var(--fontSize-7);
     margin: 0;
+    margin-bottom: var(--spacing-10);
+    margin-top: var(--spacing-10);
   }
   
   .project-list-item {
@@ -340,12 +345,6 @@
   
 /* My Styles from before */
   
-.top-banner {
-  margin: 0px;
-  max-width: 100%;
-  background-color: black;
-  height: 300px;
-}
 
 .site-description {
   color: #b6b6b8;
