--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -264,6 +264,7 @@
   .main-heading {
     font-size: var(--fontSize-7);
     margin: 0;
+    margin-bottom: var(--spacing-5);
   }
   
   .post-list-item {
