--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -416,6 +416,8 @@ ul.links > li {
   align-items: center;
 }
 
+/* Pages */
+
 /* Cards */
 
 .todo-card {
@@ -496,6 +498,9 @@ ul.links > li {
 
 .project-post-image {
   grid-area: image;
+  display:block;
+  width: 100%;
+  height: 100%;
 
   
 }
@@ -515,6 +520,8 @@ ul.links > li {
 }
 
 .project-post-container {
+  max-height: 500px;
+  max-width: 500px;
   box-shadow: 3px 3px 3px 3px rgba(0,0,0,0.2);
   transition: 0.3s;
   border-radius: 5px; /* 5px rounded corners */
