--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -45,7 +45,7 @@
     --fontWeight-bold: 700;
     --fontWeight-extrabold: 800;
     --fontWeight-black: 900;
-    --fontSize-root: 14px;
+    --fontSize-root: 12px;
     --lineHeight-none: 1;
     --lineHeight-tight: 1.1;
     --lineHeight-normal: 1.5;
@@ -449,13 +449,13 @@ ul.links > li {
   border-radius: 5px; /* 5px rounded corners */
   background-color: var(--color-accent);
   padding: var(--spacing-4);
-  margin: var(--spacing-20);
+  margin: var(--spacing-8);
 }
 
 .goal-card-icon {
   grid-area: sidebar;
   justify-self: center;
-  font-size: 3em
+  font-size: 1.5em
 }
 
 .goal-card-title {
@@ -480,9 +480,8 @@ ul.links > li {
   grid-template-columns: 15% 85%;
   grid-template-rows: auto;
   grid-template-areas: 
-    ". header"
-    "sidebar content"
-    ". footer";
+    "sidebar header"
+    "content content";
   box-shadow: 3px 3px 3px 3px rgba(0,0,0,0.2);
   transition: 0.3s;
   border-radius: 5px; /* 5px rounded corners */
