--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -447,7 +447,7 @@ ul.links > li {
   box-shadow: 3px 3px 3px 3px rgba(0,0,0,0.2);
   transition: 0.3s;
   border-radius: 5px; /* 5px rounded corners */
-  background-color: var(--color-accent);
+  /*background-color: var(--color-accent); */
   padding: var(--spacing-4);
   margin: var(--spacing-8);
 }
@@ -472,6 +472,7 @@ ul.links > li {
   display: flex;
   justify-content: center;
   align-items: center;
+  background-size: 100% 100%
 
 }
 
@@ -481,11 +482,13 @@ ul.links > li {
   grid-template-rows: auto;
   grid-template-areas: 
     "sidebar header"
-    "content content";
+    "content content"
+    "footer footer";
   box-shadow: 3px 3px 3px 3px rgba(0,0,0,0.2);
   transition: 0.3s;
   border-radius: 5px; /* 5px rounded corners */
-  background-color: var(--color-accent);
+  /*background-color: var(--color-accent); */
+  background-size: 100% 100%;
   padding: var(--spacing-4);
   margin: var(--spacing-8);  
 }
