--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -37,7 +37,7 @@
       "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
     --fontFamily-serif: "Merriweather", "Georgia", Cambria, "Times New Roman",
       Times, serif;
-    --font-body: var(--fontFamily-serif);
+    --font-body: "Helvetica Neue";
     --font-heading: var(--fontFamily-sans);
     --fontWeight-normal: 400;
     --fontWeight-medium: 500;
