--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -205,18 +205,16 @@
   }
 
   section {
-    margin-top: var(--spacing-24);
+    margin-top: var(--spacing-16);
   }
   
   blockquote {
-    color: var(--color-text-light);
     margin-left: calc(-1 * var(--spacing-6));
     margin-right: var(--spacing-8);
     padding: var(--spacing-0) var(--spacing-0) var(--spacing-0) var(--spacing-6);
-    border-left: var(--spacing-1) solid var(--color-primary);
-    font-size: var(--fontSize-2);
-    font-style: italic;
+    border-left: 200px solid var(--color-primary);
     margin-bottom: var(--spacing-8);
+    font-weight: var(--fontWeight-medium);
   }
   
   blockquote > :last-child {
@@ -240,7 +238,7 @@
   }
   
   /* Link */
-  p {
+  p  {
     padding-left: var(--spacing-8);
     padding-right: var(--spacing-8);
   }
