--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -542,7 +542,7 @@ ul.links > li {
   box-shadow: 3px 3px 3px 3px rgba(0,0,0,0.2);
   transition: 0.3s;
   border-radius: 5px; /* 5px rounded corners */
-  padding: var(--spacing-24) var(--spacing-16) var(--spacing-16) var(--spacing-16);
+  padding: var(--spacing-16) var(--spacing-16) var(--spacing-16) var(--spacing-16);
   margin: var(--spacing-4);
   display: grid;
   grid-template-columns: 50% 50%;
@@ -566,8 +566,8 @@ ul.links > li {
 }
 
 .my-modal {
-  width: 90;
+  width: 80%;
   max-width: 90vw;
-  max-height: 70;
+  max-height: 70%;
   background-color: "white";
 }
